update err string

--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -1,72 +1,26 @@
 {
-  "invalid_credentials": "Username or password is incorrect",
-  "login_success": "Login successful",
-  "login_failed": "Login failed",
-  "signup_success": "Sign up successful",
-  "signup_failed": "Sign up failed",
-  "logout_success": "Logout successful",
-  "logout_failed": "Logout failed",
-  "refresh_token_success": "Token refreshed successfully",
-  "user_not_activated": "User account has not been activated",
   "token_expired": "Your session has expired",
   "invalid_token": "Invalid authentication details",
   "token_verification_failed": "Identity verification failed",
-  "invalid_refresh_token": "Invalid refresh token",
   "admin_access_required": "Admin access required",
   "unauthorized_access": "Unauthorized access",
   "forbidden_action": "Forbidden action",
-  "email_address": "Email address",
   "password": "Password",
   "password_empty": "Password cannot be empty",
-  "email_already_registered": "Email is already registered",
   "email_verification": "Email verification",
-  "email_verification_required": "Please verify your email before logging in",
-  "email_verification_success": "Email verification successful",
-  "email_already_verified": "Email has already been verified",
   "email_verification_message": "Please verify your email to complete the account registration process.",
-  "send_email_failed": "Send email failed",
-  "send_email_successed": "Email sent successfully",
-  "send_reset_email_failed": "Failed to send password reset email",
   "password_reset": "Password reset",
-  "password_reset_email_sent": "Password reset email has been sent",
   "password_reset_message": "Here is your password reset code",
   "password_reset_code_valid_for_10_minutes": "The password reset code is valid for 10 minutes.",
-  "password_reset_success": "Password reset successful",
-  "passwords_do_not_match": "Passwords do not match",
-  "password_changed_successfully": "Your password is changed successfully",
-  "password_update_failed": "Failed to change your password",
-  "current_password_incorrect": "Current password is incorrect",
   "password_too_short": "Password must be at least 8 characters long",
-  "password_too_long": "Password must not exceed 20 characters",
   "password_invalid": "Password is invalid",
-  "password_must_contain_digit": "Password must contain at least one digit",
-  "password_must_contain_uppercase": "Password must contain at least one uppercase letter",
-  "password_must_contain_lowercase": "Password must contain at least one lowercase letter",
-  "password_must_contain_special_character": "Password must contain at least one special character",
   "password_require_uppercase": "Password must contain at least one uppercase letter",
   "password_require_lowercase": "Password must contain at least one lowercase letter",
   "password_require_special": "Password must contain at least one special character",
-  "otp_invalid_or_email_mismatch": "Invalid OTP or email mismatch",
-  "otp_expired_or_used": "OTP has expired or has already been used",
   "otp_valid_for_10_minutes": "OTP is valid for 10 minutes.",
-  "otp_invalid": "Invalid verification code",
-  "user_not_found": "User not found",
-  "user_id_required": "User ID is required",
-  "username_already_exists": "Username already exists",
   "default_strong_password": "Default Strong Password",
   "default_strong_password_message": "Your account has been created with a default strong password. Please log in and change your password immediately in the settings for security reasons.",
   "your_default_strong_password": "Your default strong password is",
-  "google_login_failed": "Google login failed",
-  "google_oauth_error": "Google OAuth authentication error",
-  "google_user_info_error": "Error retrieving Google user information",
-  "missing_access_token": "Missing access token in OAuth response",
-  "missing_user_info": "Missing user information from OAuth provider",
-  "token_processing_error": "Error processing authentication token",
-  "token_retrieval_error": "Error retrieving authentication token",
-  "missing_email_google": "Email information is missing from Google profile",
-  "google_token_revoked_success": "Google token revoked successfully",
-  "google_token_revocation_failed": "Failed to revoke Google token",
-  "operation_successful": "Operation successful",
   "resource_not_found": "Resource not found",
   "error_occurred": "An error occurred",
   "ignore_if_not_requested": "If you did not request a password reset, please ignore this email.",
@@ -74,18 +28,12 @@
   "api_title": "meobeo.ai API",
   "api_description": "meobeo.ai is an AI-powered assistant for automatic meeting note-taking and summarization. It captures key discussions, analyzes important information, and generates meeting minutes efficiently, helping users save time and enhance productivity.",
   "validation_failed": "Input data validation failed",
-  "auth_success_page_generation_error": "Error generating authentication success page",
   "authentication": "Authentication",
-  "authentication_failed": "Authentication Failed",
-  "authentication_successful": "Authentication Successful",
-  "no_parent_window": "No parent window detected return to the login page.",
-  "please_sign_in_with_google": "Please sign in with your Google account to continue.",
-  "redirecting_back": "Redirecting you back to the application...",
-  "session_expired_or_invalid": "Your session has expired or is invalid. Please try again.",
-  "sign_in_with_google": "Sign in with Google",
-  "unexpected_auth_error": "An unexpected error occurred during authentication. Please try again.",
-  "window_close_automatically": "This window will close automatically.",
   "failed_to_download_file": "Failed to download file from the provided URL.",
   "cv_processed_successfully": "CV processed successfully.",
-  "error_extracting_cv_content": "Error extracting content from CV."
+  "error_extracting_cv_content": "Error extracting content from CV.",
+  "checksum_invalid": "Checksum is invalid. File may have been corrupted or tampered with.",
+  "error_analyzing_cv": "An error occurred while analyzing the CV.",
+  "no_text_extracted": "No text could be extracted from the provided CV.",
+  "unsupported_cv_file_type": "The provided CV file type is not supported. Please upload a PDF, DOCX, or TXT file."
 }
