--- a/app/locales/vi.json
+++ b/app/locales/vi.json
@@ -1,91 +1,39 @@
 {
-  "invalid_credentials": "Tài khoản hoặc mật khẩu không đúng",
-  "login_success": "Đăng nhập thành công",
-  "login_failed": "Đăng nhập thất bại",
   "api_title": "meobeo.ai API",
   "api_description": "meobeo.ai là một trợ lý AI giúp ghi chú và tóm tắt cuộc họp tự động. Ứng dụng hỗ trợ nhận diện nội dung, phân tích thông tin quan trọng và tạo biên bản họp nhanh chóng, giúp người dùng tiết kiệm thời gian và cải thiện hiệu suất làm việc.",
-  "email_address": "Email",
   "password": "Mật khẩu",
   "password_empty": "Mật khẩu không được để trống",
   "password_too_short": "Mật khẩu phải có ít nhất 8 ký tự",
-  "password_too_long": "Mật khẩu không được vượt quá 20 ký tự",
   "password_invalid": "Mật khẩu không hợp lệ",
-  "password_must_contain_digit": "Mật khẩu phải có ít nhất một chữ số",
-  "password_must_contain_uppercase": "Mật khẩu phải có ít nhất một chữ cái viết hoa",
-  "password_must_contain_lowercase": "Mật khẩu phải có ít nhất một chữ cái viết thường",
-  "password_must_contain_special_character": "Mật khẩu phải có ít nhất một ký tự đặc biệt",
   "password_require_uppercase": "Mật khẩu phải có ít nhất một chữ cái viết hoa",
   "password_require_lowercase": "Mật khẩu phải có ít nhất một chữ cái viết thường",
   "password_require_special": "Mật khẩu phải có ít nhất một ký tự đặc biệt",
   "email_verification": "Xác thực email",
   "password_reset": "Đặt lại mật khẩu",
-  "email_verification_required": "Vui lòng xác thực email của bạn trước khi đăng nhập",
   "validation_failed": "Dữ liệu đầu vào không hợp lệ",
   "unauthorized_access": "Truy cập không được phép",
   "forbidden_action": "Hành động bị cấm",
   "resource_not_found": "Không tìm thấy tài nguyên",
   "error_occurred": "Đã xảy ra lỗi",
-  "operation_successful": "Thao tác thành công",
-  "passwords_do_not_match": "Mật khẩu không khớp",
-  "email_already_registered": "Email đã được đăng ký",
-  "signup_success": "Đăng ký thành công",
-  "signup_failed": "Đăng ký thất bại",
-  "user_not_activated": "Tài khoản người dùng chưa được kích hoạt",
   "token_expired": "Phiên đăng nhập đã hết hạn",
   "invalid_token": "Thông tin xác thực không hợp lệ",
   "token_verification_failed": "Không thể xác minh danh tính",
-  "send_email_failed": "Gửi email thất bại",
-  "send_email_successed": "Gửi email thành công",
-  "otp_invalid_or_email_mismatch": "Mã OTP không hợp lệ hoặc email không khớp",
-  "otp_expired_or_used": "Mã OTP đã hết hạn hoặc đã được sử dụng",
   "admin_access_required": "Cần quyền truy cập quản trị viên",
-  "email_verification_success": "Xác thực email thành công",
-  "password_reset_email_sent": "Email đặt lại mật khẩu đã được gửi",
   "password_reset_message": "Đây là mã đặt lại mật khẩu của bạn",
   "password_reset_code_valid_for_10_minutes": "Mã đặt lại mật khẩu có hiệu lực trong 10 phút.",
   "ignore_if_not_requested": "Nếu bạn không yêu cầu đặt lại mật khẩu, vui lòng bỏ qua email này.",
   "do_not_reply": "Đây là một tin nhắn tự động, vui lòng không trả lời.",
-  "email_already_verified": "Email đã được xác thực",
-  "password_reset_success": "Đặt lại mật khẩu thành công",
   "email_verification_message": "Vui lòng xác thực email của bạn để hoàn tất quá trình đăng ký tài khoản.",
   "otp_valid_for_10_minutes": "Mã OTP có hiệu lực trong 10 phút.",
-  "username_already_exists": "Tên người dùng đã tồn tại",
-  "user_not_found": "Không tìm thấy người dùng",
-  "current_password_incorrect": "Mật khẩu hiện tại không đúng",
   "default_strong_password": "Mật khẩu mạnh mặc định",
   "default_strong_password_message": "Tài khoản của bạn đã được tạo với một mật khẩu mạnh mặc định. Vui lòng đăng nhập và thay đổi mật khẩu của bạn ngay lập tức trong phần cài đặt vì lý do bảo mật.",
   "your_default_strong_password": "Mật khẩu mạnh mặc định của bạn là",
-  "password_changed_successfully": "Thay đổi mật khẩu thành công",
-  "password_update_failed": "Thay đổi mật khẩu thất bại",
-  "user_id_required": "Yêu cầu ID người dùng",
-  "google_login_failed": "Đăng nhập Google thất bại",
-  "google_oauth_error": "Lỗi xác thực OAuth Google",
-  "google_user_info_error": "Lỗi lấy thông tin người dùng Google",
-  "missing_access_token": "Thiếu token truy cập trong phản hồi OAuth",
-  "missing_user_info": "Thiếu thông tin người dùng từ nhà cung cấp OAuth",
-  "token_processing_error": "Lỗi xử lý token xác thực",
-  "token_retrieval_error": "Lỗi lấy token xác thực",
-  "missing_email_google": "Thiếu thông tin email từ hồ sơ Google",
-  "google_token_revoked_success": "Hủy token Google thành công",
-  "google_token_revocation_failed": "Hủy token Google thất bại",
-  "logout_success": "Đăng xuất thành công",
-  "logout_failed": "Đăng xuất thất bại",
-  "refresh_token_success": "Làm mới token thành công",
-  "invalid_refresh_token": "Token làm mới không hợp lệ",
-  "send_reset_email_failed": "Gửi email đặt lại mật khẩu thất bại",
-  "otp_invalid": "Mã xác thực không hợp lệ",
-  "auth_success_page_generation_error": "Lỗi tạo trang thành công xác thực",
-  "authentication_failed": "Xác thực thất bại",
-  "authentication_successful": "Xác thực thành công",
-  "no_parent_window": "Không phát hiện cửa sổ cha quay lại trang đăng nhập.",
-  "redirecting_back": "Đang chuyển hướng bạn trở lại ứng dụng...",
-  "session_expired_or_invalid": "Phiên của bạn đã hết hạn hoặc không hợp lệ. Vui lòng thử lại.",
-  "unexpected_auth_error": "Đã xảy ra lỗi không mong muốn trong quá trình xác thực. Vui lòng thử lại.",
-  "window_close_automatically": "Cửa sổ này sẽ tự động đóng.",
   "authentication": "Xác thực",
-  "please_sign_in_with_google": "Vui lòng đăng nhập bằng tài khoản Google để tiếp tục.",
-  "sign_in_with_google": "Đăng nhập với Google",
   "failed_to_download_file": "Không thể tải xuống tệp từ URL được cung cấp.",
   "cv_processed_successfully": "CV đã được xử lý thành công.",
-  "error_extracting_cv_content": "Lỗi trích xuất nội dung từ CV."
+  "error_extracting_cv_content": "Lỗi trích xuất nội dung từ CV.",
+  "checksum_invalid": "Checksum không hợp lệ. Tệp có thể đã bị hỏng hoặc bị thay đổi.",
+  "error_analyzing_cv": "Đã xảy ra lỗi trong quá trình phân tích CV.",
+  "no_text_extracted": "Không thể trích xuất văn bản từ CV được cung cấp.",
+  "unsupported_cv_file_type": "Loại tệp CV được cung cấp không được hỗ trợ. Vui lòng tải lên tệp PDF, DOCX hoặc TXT."
 }
